# libtess2

./: CMakeLists.txt
Include/: tesselator.h
Source/: Makefile  sweep.c
